--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,20 @@
 version: '3.7'
 services:
-  reddit-bot:
-    image: ghcr.io/luois45/claim-free-steam-packages:latest
-    deploy:
-      replicas: 1
-      restart_policy:
-        condition: on-failure
-        max_attempts: 0
+  archisteamfarm:
+    image: justarchi/archisteamfarm
+    volumes:
+      - /mnt/docker-volumes/archisteamfarm-config:/app/config
+    restart: unless-stopped
+    ports:
+    - target: 1242
+      published: 21242
+      mode: host
+  claim-free-steam-packages:
+    image: luois45/claim-free-steam-packages
+    restart: unless-stopped
     volumes:
       # Replace the first path with your path to the activated_packages.txt & config.json file
-      - /c/Users/Louis/Desktop/code/ClaimSteamLicenses/acitvated_packages.txt:/usr/src/app/activated_packages.txt
-      - /c/Users/Louis/Desktop/code/ClaimSteamLicenses/config.json:/usr/src/app/config.json:ro
+      - /mnt/docker-volumes/claim-free-steam-packages/acitvated_packages.txt:/usr/src/app/activated_packages.txt
+      - /mnt/docker-volumes/claim-free-steam-packages/config.json:/usr/src/app/config.json:ro
       # Comment the following line if you don't want the logs in your directory
-      - /c/Users/Louis/Desktop/code/ClaimSteamLicenses/logging.txt:/usr/src/app/logging.txt
+      - /mnt/docker-volumes/claim-free-steam-packages/logging.txt:/usr/src/app/logging.txt
